Update privacy policy content

--- a/privacy.html
+++ b/privacy.html
@@ -117,8 +117,14 @@
             <li><strong>ტექნიკური მონაცემები:</strong> IP მისამართი, ბრაუზერის ტიპი და საიტზე ქცევის ისტორია (Google Analytics-ის მეშვეობით).</li>
         </ul>
 
-        <h2>3. მონაცემთა შენახვის ვადა</h2>
-        <p>თქვენი პერსონალური მონაცემები (მაგ: ტელეფონის ნომერი და ლოკაცია) ინახება მხოლოდ იმდენ ხანს, რამდენიც საჭიროა მომსახურების სრულყოფილად გაწევისთვის. მომსახურების დასრულების შემდეგ, ლოკაციის მონაცემები იშლება ჩვენი სისტემებიდან, გარდა იმ შემთხვევისა, როდესაც კანონი მოითხოვს მათ შენახვას (მაგ: საგადასახადო მიზნებისთვის).</p>
+        <h2>3. მონაცემთა შენახვის ვადა და უსაფრთხოება</h2>
+        <p>თქვენი პერსონალური მონაცემები (მაგ: საკონტაქტო ინფორმაცია და მიმოწერის ისტორია) ინახება ჩვენს დაცულ სისტემებში (ელ-ფოსტა, WhatsApp) გონივრული ვადით, რაც საჭიროა:</p>
+        <ul>
+            <li>მომსახურების ხარისხის უზრუნველსაყოფად;</li>
+            <li>საგადასახადო და იურიდიული ვალდებულებების შესასრულებლად;</li>
+            <li>შესაძლო დავების გადასაჭრელად.</li>
+        </ul>
+        <p>ჩვენ არ ვიყენებთ თქვენს ლოკაციას ან ტელეფონის ნომერს მარკეტინგული მიზნებისთვის (სარეკლამო სმს-ების დასაგზავნად) თქვენი თანხმობის გარეშე.</p>
 
         <h2>4. მომხმარებლის უფლებები</h2>
         <p>საქართველოს კანონმდებლობის თანახმად, თქვენ გაქვთ უფლება:</p>
