--- a/terms.html
+++ b/terms.html
@@ -88,6 +88,18 @@
             }
             .sticky-back-btn i { font-size: 0.9rem; }
         }
+        
+        @media (max-width: 320px) {
+            .legal-container, .container { padding: 15px 10px; }
+            h1 { font-size: 1.3rem; }
+            h2 { font-size: 0.95rem; }
+            .sticky-back-btn {
+                bottom: 0.5rem;
+                right: 0.5rem;
+                padding: 0.6rem 0.75rem;
+                font-size: 0.75rem;
+            }
+        }
     </style>
 </head>
 <body>
