--- a/index.html
+++ b/index.html
@@ -69,25 +69,25 @@
     <!-- HEADER & NAVIGATION -->
     <header class="header">
         <nav class="navbar">
-            <a href="index.html" class="logo">
+            <a href="/" class="logo">
                 <img src="Photos/Logo.webp" alt="MEGA+ Logo" width="60" height="60">
             </a>
             <ul class="nav-links">
-                <li><a href="index.html" class="active" data-i18n="nav.home">მთავარი</a></li>
+                <li><a href="/" class="active" data-i18n="nav.home">მთავარი</a></li>
                 <li class="dropdown">
-                    <a href="services.html"><span data-i18n="nav.services">სერვისები</span> <i class="fas fa-chevron-down dropdown-icon"></i></a>
+                    <a href="/services"><span data-i18n="nav.services">სერვისები</span> <i class="fas fa-chevron-down dropdown-icon"></i></a>
                     <ul class="dropdown-menu">
-                        <li><a href="services.html#evacuator" data-i18n="services_page.evacuator.title">ევაკუატორი</a></li>
-                        <li><a href="services.html#crane" data-i18n="services_page.crane.title">ამწე კრანი</a></li>
-                        <li><a href="services.html#special-equipment" data-i18n="services_page.special_equipment.title">სპეც-ტექნიკა</a></li>
-                        <li><a href="services.html#starting" data-i18n="services_page.starting.title">მანქანის დაქოქვა</a></li>
-                        <li><a href="services.html#door" data-i18n="services_page.door.title">კარის გახსნა</a></li>
-                        <li><a href="services.html#fuel" data-i18n="services_page.fuel.title">საწვავის მიწოდება</a></li>
-                        <li><a href="services.html#tire" data-i18n="services_page.tire.title">საბურავის შეცვლა</a></li>
+                        <li><a href="/services#evacuator" data-i18n="services_page.evacuator.title">ევაკუატორი</a></li>
+                        <li><a href="/services#crane" data-i18n="services_page.crane.title">ამწე კრანი</a></li>
+                        <li><a href="/services#special-equipment" data-i18n="services_page.special_equipment.title">სპეც-ტექნიკა</a></li>
+                        <li><a href="/services#starting" data-i18n="services_page.starting.title">მანქანის დაქოქვა</a></li>
+                        <li><a href="/services#door" data-i18n="services_page.door.title">კარის გახსნა</a></li>
+                        <li><a href="/services#fuel" data-i18n="services_page.fuel.title">საწვავის მიწოდება</a></li>
+                        <li><a href="/services#tire" data-i18n="services_page.tire.title">საბურავის შეცვლა</a></li>
                     </ul>
                 </li>
-                <li><a href="gallery.html" data-i18n="nav.gallery">ფოტო გალერეა</a></li>
-                <li><a href="contact.html" data-i18n="nav.contact">კონტაქტი</a></li>
+                <li><a href="/gallery" data-i18n="nav.gallery">ფოტო გალერეა</a></li>
+                <li><a href="/contact" data-i18n="nav.contact">კონტაქტი</a></li>
             </ul>
             <div class="header-contact">
                 <a href="tel:+995551305305" class="phone-link">
@@ -193,7 +193,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
-                <a href="index.html" class="footer-logo-link" title="Go to Home">
+                <a href="/" class="footer-logo-link" title="Go to Home">
                     <picture>
                         <source srcset="Photos/Logo.webp" type="image/webp">
                         <img src="Photos/Logo.webp" alt="MEGA+ Logo" class="footer-logo" width="200" height="200">
@@ -203,10 +203,10 @@
             <div class="footer-section">
                 <h4 data-i18n="footer.quick_links">მენიუ</h4>
                 <ul>
-                    <li><a href="index.html" data-i18n="nav.home">მთავარი</a></li>
-                    <li><a href="services.html" data-i18n="nav.services">სერვისები</a></li>
-                    <li><a href="gallery.html" data-i18n="nav.gallery">ფოტო გალერეა</a></li>
-                    <li><a href="contact.html" data-i18n="nav.contact">კონტაქტი</a></li>
+                    <li><a href="/" data-i18n="nav.home">მთავარი</a></li>
+                    <li><a href="/services" data-i18n="nav.services">სერვისები</a></li>
+                    <li><a href="/gallery" data-i18n="nav.gallery">ფოტო გალერეა</a></li>
+                    <li><a href="/contact" data-i18n="nav.contact">კონტაქტი</a></li>
                 </ul>
             </div>
             <div class="footer-section">
