--- a/privacy.html
+++ b/privacy.html
@@ -146,7 +146,7 @@
     </div>
     
     <!-- STICKY BACK BUTTON -->
-    <a href="index.html" class="sticky-back-btn">
+    <a href="/" class="sticky-back-btn">
         <i class="fas fa-arrow-left"></i>
         <span>მთავარი</span>
     </a>
