--- a/services.html
+++ b/services.html
@@ -69,13 +69,13 @@
     <!-- HEADER & NAVIGATION -->
     <header class="header">
         <nav class="navbar">
-            <a href="index.html" class="logo" style="text-decoration: none; cursor: pointer;">
+            <a href="/" class="logo" style="text-decoration: none; cursor: pointer;">
                 <img src="Photos/Logo.webp" alt="MEGA+ Logo" width="60" height="60">
             </a>
             <ul class="nav-links">
-                <li><a href="index.html" data-i18n="nav.home">მთავარი</a></li>
+                <li><a href="/" data-i18n="nav.home">მთავარი</a></li>
                 <li class="dropdown">
-                    <a href="services.html"><span data-i18n="nav.services">სერვისები</span> <i class="fas fa-chevron-down dropdown-icon"></i></a>
+                    <a href="/services"><span data-i18n="nav.services">სერვისები</span> <i class="fas fa-chevron-down dropdown-icon"></i></a>
                     <ul class="dropdown-menu">
                         <li><a href="#evacuator" data-i18n="services_page.evacuator.title">ევაკუატორი</a></li>
                         <li><a href="#crane" data-i18n="services_page.crane.title">ამწე კრანი</a></li>
@@ -86,8 +86,8 @@
                         <li><a href="#tire" data-i18n="services_page.tire.title">საბურავის შეცვლა</a></li>
                     </ul>
                 </li>
-                <li><a href="gallery.html" data-i18n="nav.gallery">ფოტო გალერეა</a></li>
-                <li><a href="contact.html" data-i18n="nav.contact">კონტაქტი</a></li>
+                <li><a href="/gallery" data-i18n="nav.gallery">ფოტო გალერეა</a></li>
+                <li><a href="/contact" data-i18n="nav.contact">კონტაქტი</a></li>
             </ul>
             <div class="header-contact">
                 <a href="tel:+995551305305" class="phone-link">
@@ -342,7 +342,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
-                <a href="index.html" class="footer-logo-link" title="Go to Home">
+                <a href="/" class="footer-logo-link" title="Go to Home">
                     <picture>
                         <source srcset="Photos/Logo.webp" type="image/webp">
                         <img src="Photos/Logo.webp" alt="MEGA+ Logo" class="footer-logo">
@@ -352,10 +352,10 @@
             <div class="footer-section">
                 <h4 data-i18n="footer.quick_links">მენიუ</h4>
                 <ul>
-                    <li><a href="index.html" data-i18n="nav.home">მთავარი</a></li>
-                    <li><a href="services.html" data-i18n="nav.services">სერვისები</a></li>
-                    <li><a href="gallery.html" data-i18n="nav.gallery">ფოტო გალერეა</a></li>
-                    <li><a href="contact.html" data-i18n="nav.contact">კონტაქტი</a></li>
+                    <li><a href="/" data-i18n="nav.home">მთავარი</a></li>
+                    <li><a href="/services" data-i18n="nav.services">სერვისები</a></li>
+                    <li><a href="/gallery" data-i18n="nav.gallery">ფოტო გალერეა</a></li>
+                    <li><a href="/contact" data-i18n="nav.contact">კონტაქტი</a></li>
                 </ul>
             </div>
             <div class="footer-section">
