--- a/terms.html
+++ b/terms.html
@@ -126,7 +126,7 @@
     </div>
     
     <!-- STICKY BACK BUTTON -->
-    <a href="index.html" class="sticky-back-btn">
+    <a href="/" class="sticky-back-btn">
         <i class="fas fa-arrow-left"></i>
         <span>მთავარი</span>
     </a>
