--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="MEGA+ Towing - Professional 24/7 evacuation, recovery, and towing services in Georgia. Emergency roadside assistance, crane service, tire change, fuel delivery, and more.">
-    <meta name="keywords" content="Evacuator, ევაკუატორი, Эвакуатор, Evacuator rustavi, ევაკუატორი რუსთავში, Эвакуатор Рустави, 24/7, ევაკუატორი გამოძახებით, Эвакуатор по вызову, Evacuator on call">
-    <meta name="author" content="MEGA+ Towing">
+    <meta name="description" id="meta-description" content="მეგა+ ევაკუატორის პროფესიონალური სერვისი რუსთავსა და მთლიან საქართველოში. გამოიძახე ევაკუატორი თუ სხვა მომსახურება სწრაფად და უსაფრთხოდ, დაბალ ფასში">
+    <meta name="keywords" content="ევაკუატორი, evacuator,ევაკუატორი რუსთავში, evacuator rustavi, ევაკუატორი 24/7, ევაკუატორი გამოძახებით, მეგა+ ევაკუატორი, mega+ evacuator">
+    <meta name="author" content="MEGA+ Evacuator">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="MEGA+ Towing - Professional Evacuation & Recovery Services">
-    <meta property="og:description" content="24/7 Professional towing and recovery services in Georgia with fastest response time.">
+    <meta property="og:title" content="24/7 ევაკუატორი და ავტო დახმარების სერვისი - megaevacuator.ge">
+    <meta property="og:description" content="მეგა+ ევაკუატორის პროფესიონალური სერვისი რუსთავსა და მთლიან საქართველოში. გამოიძახე ევაკუატორი თუ სხვა მომსახურება სწრაფად და უსაფრთხოდ, დაბალ ფასში">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://megaevacuator.ge">
     
