--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="MEGA+ Towing - Professional 24/7 evacuation, recovery, and towing services in Georgia. Emergency roadside assistance, crane service, tire change, fuel delivery, and more.">
+    <meta name="description" id="meta-description" content="MEGA+ Towing - Professional 24/7 evacuation, recovery, and towing services in Georgia. Emergency roadside assistance, crane service, tire change, fuel delivery, and more.">
     <meta name="keywords" content="Evacuator, ევაკუატორი, Эвакуатор, Evacuator rustavi, ევაკუატორი რუსთავში, Эвакуатор Рустави, 24/7, ევაკუატორი გამოძახებით, Эвакуатор по вызову, Evacuator on call">
     <meta name="author" content="MEGA+ Towing">
     <meta name="robots" content="index, follow">
