Add structured data (JSON-LD) to homepage for SEO

--- a/index.html
+++ b/index.html
@@ -246,5 +246,46 @@
         </div>
     </div>
 </div>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "TowingService",
+  "name": "MEGA+ Towing Rustavi",
+  "image": "https://megaevacuator.ge/Photos/Logo.webp",
+  "@id": "https://megaevacuator.ge",
+  "url": "https://megaevacuator.ge",
+  "telephone": "+995551305305",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "HXG8+65R, Rustavi",
+    "addressLocality": "Rustavi",
+    "postalCode": "3700",
+    "addressCountry": "GE"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 41.57576881768587, 
+    "longitude": 44.96542761216941
+  },
+  "openingHoursSpecification": {
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Monday",
+      "Tuesday",
+      "Wednesday",
+      "Thursday",
+      "Friday",
+      "Saturday",
+      "Sunday"
+    ],
+    "opens": "00:00",
+    "closes": "23:59"
+  },
+  "sameAs": [
+    "https://www.facebook.com/evacuator.rustavi",
+    "https://www.tiktok.com/@_mega_305_"
+  ]
+}
+</script>
 </body>
 </html>
