Add canonical tags and Georgian author metadata to all pages

--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" id="meta-description" content="მეგა+ ევაკუატორის პროფესიონალური სერვისი რუსთავსა და მთლიან საქართველოში. გამოიძახე ევაკუატორი თუ სხვა მომსახურება სწრაფად და უსაფრთხოდ, დაბალ ფასში">
     <meta name="keywords" content="ევაკუატორი, evakuatori, ევაკუატორი რუსთავში, evakuatori rustavi, ევაკუატორი 24/7, ევაკუატორი გამოძახებით, evakuatori gamodzaxebit, ევაკუატორი ობობა, ევაკუატორი იაფად, მეგა+ ევაკუატორი, mega+ evacuator">
-    <meta name="author" content="MEGA+ Evacuator">
+    <meta name="author" content="ევაკუატორი რუსთავი MEGA+">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="24/7 ევაკუატორი და ავტო დახმარების სერვისი - megaevacuator.ge">
     <meta property="og:description" content="მეგა+ ევაკუატორის პროფესიონალური სერვისი რუსთავსა და მთლიან საქართველოში. გამოიძახე ევაკუატორი თუ სხვა მომსახურება სწრაფად და უსაფრთხოდ, დაბალ ფასში">
@@ -14,7 +14,8 @@
     <meta property="og:image" content="https://megaevacuator.ge/Photos/hero-bg.jpg">
     <meta property="og:locale" content="ka_GE">
     
-    <title>ავტო დახმარება - ევაკუატორი საქართველოში 24/7 - MEGA+ Evacuator</title>
+    <title>ავტო დახმარება - ევაკუატორი საქართველოში 24/7 - მეგა+ | mega+</title>
+    <link rel="canonical" href="https://megaevacuator.ge/gallery">
     <link rel="icon" type="image/webp" href="Photos/Logo.webp">
 
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
