Update website files and optimize photo assets

--- a/services.html
+++ b/services.html
@@ -16,7 +16,8 @@
     
     <title>ავტო დახმარება - ევაკუატორი საქართველოში 24/7 - მეგა+ | mega+</title>
     <link rel="canonical" href="https://megaevacuator.ge/services">
-    <link rel="icon" type="image/webp" href="Photos/Logo.webp">
+    <link rel="icon" type="image/png" href="Photos/Logo.png">
+    <link rel="apple-touch-icon" href="Photos/Logo.png">
 
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
     <link rel="dns-prefetch" href="https://nominatim.openstreetmap.org">
