Update services, gallery, and contact pages

--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
     <meta property="og:image" content="https://megaevacuator.ge/Photos/hero-bg.jpg">
     <meta property="og:locale" content="ka_GE">
     
-    <title>ავტო დახმარება - ევაკუატორი საქართველოში 24/7 - მეგა+ | mega+</title>
+    <title>ავტო დახმარება - ევაკუატორი რუსთავი 24/7 - მეგა+ | mega+</title>
     <link rel="canonical" href="https://megaevacuator.ge/gallery">
     <link rel="icon" type="image/png" href="Photos/Logo.png">
     <link rel="apple-touch-icon" href="Photos/Logo.png">
