--- a/contact.html
+++ b/contact.html
@@ -217,7 +217,7 @@
         <section class="map-section">
             <h2 data-i18n="map.title">ჩვენი სპეცავტოსადგომი</h2>
             <div class="map-container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2984.7061334253035!2d44.96280977497877!3d41.575604284301015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x404407c20705f761%3A0xb1e41ad02a06d7ae!2z4YOh4YOe4YOU4YOq4YOQ4YOV4YOi4YOd4YOh4YOQ4YOT4YOS4YOd4YOb4YOY!5e0!3m2!1sen!2sge!4v1763406696638!5m2!1sen!2sge" width="100%" height="400" style="border:0; border-radius: 8px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2984.688818843902!2d44.96138431188166!3d41.57597897115676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x404407f789b73759%3A0x87fb124d4041fc4f!2zTUVHQSsg4YOU4YOV4YOQ4YOZ4YOj4YOQ4YOi4YOd4YOg4YOYIOGDoOGDo-GDoeGDl-GDkOGDleGDmCAyNC83!5e0!3m2!1sen!2sge!4v1764934702891!5m2!1sen!2sge" width="100%" height="400" style="border:0; border-radius: 8px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
         <!-- FAQ SECTION -->
